--- a/setup.ipynb
+++ b/setup.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "14f580b5",
+   "execution_count": 4,
+   "id": "ee19775f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['c:\\\\Users\\\\20203686\\\\Documents\\\\GitHub\\\\CT-CLIP\\\\MASTER\\\\Scripts\\\\python.exe', '-m', 'venv', 'MASTER'], returncode=1)"
+       "CompletedProcess(args=['pip', 'install', 'accelerate', 'beartype', 'einops>=0.6', 'ema-pytorch>=0.2.2', 'opencv-python', 'pillow', 'numpy', 'sentencepiece', 'torchtyping', 'torchvision', 'tqdm', 'vector-quantize-pytorch==1.1.2', 'nibabel', 'openpyxl', 'torch==2.0.1', 'transformers==4.30.1'], returncode=0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,35 +22,6 @@
     "import subprocess\n",
     "import sys\n",
     "\n",
-    "env_name = \"MASTER\"\n",
-    "python_version = \"3.10\"  # or your preferred version\n",
-    "\n",
-    "# Create the virtual environment\n",
-    "subprocess.run([sys.executable, \"-m\", \"venv\", env_name])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ee19775f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args=['MASTER\\\\Scripts\\\\pip.exe', 'install', 'accelerate', 'beartype', 'einops>=0.6', 'ema-pytorch>=0.2.2', 'opencv-python', 'pillow', 'numpy', 'sentencepiece', 'torchtyping', 'torchvision', 'tqdm', 'vector-quantize-pytorch==1.1.2', 'nibabel', 'openpyxl'], returncode=0)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Define the pip path in the new environment\n",
-    "pip_path = os.path.join(env_name, \"bin\", \"pip\") if os.name != 'nt' else os.path.join(env_name, \"Scripts\", \"pip.exe\")\n",
-    "\n",
-    "# Packages to install\n",
     "packages = [\n",
     "    \"accelerate\",\n",
     "    \"beartype\",\n",
@@ -72,8 +43,8 @@
     "]\n",
     "\n",
     "# Install the packages\n",
-    "subprocess.run([pip_path, \"install\", \"--upgrade\", \"pip\"])\n",
-    "subprocess.run([pip_path, \"install\"] + packages)\n"
+    "subprocess.run([\"pip\", \"install\", \"--upgrade\", \"pip\"])\n",
+    "subprocess.run([\"pip\", \"install\"] + packages)\n"
    ]
   },
   {
@@ -101,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
