--- a/CT_CLIP/setup.ipynb
+++ b/CT_CLIP/setup.ipynb
@@ -2,10 +2,128 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a911ae8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upgrading pip...\n",
+      "Installing numpy<2.0...\n",
+      "Successfully installed numpy<2.0\n",
+      "Installing torch==2.0.1...\n",
+      "Successfully installed torch==2.0.1\n",
+      "Installing torchvision==0.15.2...\n",
+      "Successfully installed torchvision==0.15.2\n",
+      "Installing transformers==4.30.1...\n",
+      "Successfully installed transformers==4.30.1\n",
+      "Installing beartype...\n",
+      "Successfully installed beartype\n",
+      "Installing einops>=0.6...\n",
+      "Successfully installed einops>=0.6\n",
+      "Installing ftfy...\n",
+      "Successfully installed ftfy\n",
+      "Installing regex...\n",
+      "Successfully installed regex\n",
+      "Installing XlsxWriter...\n",
+      "Successfully installed XlsxWriter\n",
+      "Installing h5py...\n",
+      "Successfully installed h5py\n",
+      "Installing matplotlib...\n",
+      "Successfully installed matplotlib\n",
+      "Installing seaborn...\n",
+      "Successfully installed seaborn\n",
+      "Installing wilds...\n",
+      "Successfully installed wilds\n",
+      "Installing ImageNetV2_pytorch@git+https://github.com/modestyachts/ImageNetV2_pytorch.git...\n",
+      "Successfully installed ImageNetV2_pytorch@git+https://github.com/modestyachts/ImageNetV2_pytorch.git\n",
+      "Installing click...\n",
+      "Successfully installed click\n",
+      "Installing appdirs...\n",
+      "Successfully installed appdirs\n",
+      "Installing attr...\n",
+      "Successfully installed attr\n",
+      "Installing nltk...\n",
+      "Successfully installed nltk\n",
+      "Installing accelerate...\n",
+      "Successfully installed accelerate\n",
+      "Installing ema-pytorch>=0.2.2...\n",
+      "Successfully installed ema-pytorch>=0.2.2\n",
+      "Installing opencv-python...\n",
+      "Successfully installed opencv-python\n",
+      "Installing pillow...\n",
+      "Successfully installed pillow\n",
+      "Installing sentencepiece...\n",
+      "Successfully installed sentencepiece\n",
+      "Installing torchtyping...\n",
+      "Successfully installed torchtyping\n",
+      "Installing tqdm...\n",
+      "Successfully installed tqdm\n",
+      "Installing vector-quantize-pytorch==1.1.2...\n",
+      "Successfully installed vector-quantize-pytorch==1.1.2\n",
+      "Installing nibabel...\n",
+      "Successfully installed nibabel\n",
+      "Installing openpyxl...\n",
+      "Successfully installed openpyxl\n",
+      "\n",
+      "Verifying installed packages...\n",
+      "numpy<2.0: Not installed\n",
+      "torch: 2.0.1\n",
+      "torchvision: 0.15.2\n",
+      "transformers: 4.30.1\n",
+      "beartype: 0.21.0\n",
+      "einops: 0.8.1\n",
+      "ftfy: 6.3.1\n",
+      "regex: 2024.11.6\n",
+      "XlsxWriter: Not installed\n",
+      "h5py: 3.13.0\n",
+      "matplotlib: 3.10.3\n",
+      "seaborn: 0.13.2\n",
+      "wilds: 2.0.0\n",
+      "ImageNetV2_pytorch: Not installed\n",
+      "click: 8.2.1\n",
+      "appdirs: 1.4.4\n",
+      "attr: 0.3.2\n",
+      "nltk: 3.9.1\n",
+      "accelerate: 1.7.0\n",
+      "ema-pytorch: 0.7.7\n",
+      "opencv-python: 4.11.0.86\n",
+      "pillow: 11.2.1\n",
+      "sentencepiece: 0.2.0\n",
+      "torchtyping: 0.1.5\n",
+      "tqdm: 4.67.1\n",
+      "vector-quantize-pytorch: 1.1.2\n",
+      "nibabel: 5.3.2\n",
+      "openpyxl: 3.1.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\20203686\\AppData\\Local\\Temp\\ipykernel_8564\\4032338294.py:58: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "  import pkg_resources\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\20203686\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "c:\\Users\\20203686\\AppData\\Local\\anaconda3\\envs\\MasterProject\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "All packages imported successfully!\n",
+      "PyTorch: 2.0.1+cpu\n",
+      "Transformers: 4.30.1\n",
+      "NumPy: 1.23.5\n"
+     ]
+    }
+   ],
    "source": [
     "# install_packages.py\n",
     "# Run this script in the MASTER environment to install required packages for ct-clip and transformer_maskgit\n",
@@ -115,10 +233,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36ddfa23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://download.pytorch.org/whl/cu118\n",
+      "Requirement already satisfied: torch==2.0.1 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (2.0.1)\n",
+      "Requirement already satisfied: torchvision==0.15.2 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (0.15.2)\n",
+      "Collecting torchaudio==2.0.2\n",
+      "  Downloading https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp310-cp310-win_amd64.whl (2.5 MB)\n",
+      "     ---------------------------------------- 0.0/2.5 MB ? eta -:--:--\n",
+      "     ---------------------------------------- 2.5/2.5 MB 68.7 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: filelock in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torch==2.0.1) (3.18.0)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torch==2.0.1) (4.12.2)\n",
+      "Requirement already satisfied: sympy in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torch==2.0.1) (1.14.0)\n",
+      "Requirement already satisfied: networkx in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torch==2.0.1) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torch==2.0.1) (3.1.6)\n",
+      "Requirement already satisfied: numpy in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torchvision==0.15.2) (1.23.5)\n",
+      "Requirement already satisfied: requests in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torchvision==0.15.2) (2.32.3)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from torchvision==0.15.2) (11.2.1)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from jinja2->torch==2.0.1) (3.0.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from requests->torchvision==0.15.2) (3.4.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from requests->torchvision==0.15.2) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from requests->torchvision==0.15.2) (2.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from requests->torchvision==0.15.2) (2025.4.26)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\20203686\\appdata\\local\\anaconda3\\envs\\masterproject\\lib\\site-packages (from sympy->torch==2.0.1) (1.3.0)\n",
+      "Installing collected packages: torchaudio\n",
+      "Successfully installed torchaudio-2.0.2+cu118\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install torch==2.0.1 torchvision==0.15.2 torchaudio==2.0.2 --index-url https://download.pytorch.org/whl/cu118"
    ]
@@ -135,8 +284,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "MasterProject",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
