--- a/setup.ipynb
+++ b/setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ee19775f",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "CompletedProcess(args=['pip', 'install', 'accelerate', 'beartype', 'einops>=0.6', 'ema-pytorch>=0.2.2', 'opencv-python', 'pillow', 'numpy', 'sentencepiece', 'torchtyping', 'torchvision', 'tqdm', 'vector-quantize-pytorch==1.1.2', 'nibabel', 'openpyxl', 'torch==2.0.1', 'transformers==4.30.1'], returncode=0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MASTER",
+   "display_name": "MasterProject",
    "language": "python",
    "name": "python3"
   },
