--- a/CT_CLIP/Running_CT-CLIP.ipynb
+++ b/CT_CLIP/Running_CT-CLIP.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f462e3cd",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4c4c8a7b",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,9 @@
     }
    ],
    "source": [
-    "def load_dicom_series(folder_path):\n",
+    "import nibabel as nib\n",
+    "\n",
+    "def load_dicom_series(folder_path, nifti_path):\n",
     "    \"\"\"\n",
     "    Load a series of DICOM files from a folder and create a 3D volume.\n",
     "    \n",
@@ -131,6 +133,13 @@
     "    \n",
     "    # Stack slices to create 3D volume\n",
     "    volume = np.stack(slices, axis=-1)  # Shape: (H, W, D)\n",
+    "\n",
+    "    # Save the volume as a NIfTI file in the same folder\n",
+    "\n",
+    "    nifti_img = nib.Nifti1Image(volume, affine=np.eye(4))\n",
+    "    nifti_path = folder / f\"{folder.name}_ct.nii.gz\"\n",
+    "    nib.save(nifti_img, nifti_path)\n",
+    "    print(f\"Saved NIfTI file to: {nifti_path}\")\n",
     "    \n",
     "    print(f\"Loaded CT volume with shape: {volume.shape}\")\n",
     "    return volume\n",
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a6bf5931",
    "metadata": {},
    "outputs": [
@@ -155,10 +164,18 @@
       "\n",
       "Testing DICOM loading with: THX AX MIP 10 8\n",
       "Found 45 DICOM files in THX AX MIP 10 8\n",
-      "Sorted by SliceLocation\n",
-      "Loaded CT volume with shape: (512, 512, 45)\n",
-      "✓ Successfully loaded CT volume with shape: (512, 512, 45)\n",
-      "✓ HU range: [-1024.0, 3071.0]\n"
+      "Sorted by SliceLocation\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -179,10 +196,12 @@
     "    \n",
     "    # Test loading the first CT scan\n",
     "    test_folder = ct_scan_folders[0]\n",
+    "    nifti_path = test_folder / f\"{test_folder.name}_ct.nii.gz\"\n",
+    "    nifti_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "    print(f\"\\nTesting DICOM loading with: {test_folder.name}\")\n",
     "    \n",
     "    try:\n",
-    "        ct_volume = load_dicom_series(test_folder)\n",
+    "        ct_volume = load_dicom_series(test_folder, nifti_path)\n",
     "        print(f\"✓ Successfully loaded CT volume with shape: {ct_volume.shape}\")\n",
     "        print(f\"✓ HU range: [{ct_volume.min():.1f}, {ct_volume.max():.1f}]\")\n",
     "    except Exception as e:\n",
